# freeagent-cli

./: Cargo.toml  README.md  package.json
.github/workflows/: prepare-release.yml  release.yml  tests.yml
docs/: account-managers.md  accounting.md  attachments.md  bank-accounts.md  bank-feeds.md  bank-transaction-explanations.md  bank-transactions.md  bills.md  capital-asset-types.md  capital-assets.md  categories.md  cis-bands.md  clients.md  company.md  contacts.md  corporation-tax-returns.md  credit-note-reconciliations.md  credit-notes.md  currencies.md  depreciation-profiles.md  ec-moss.md  email-addresses.md  estimate-items.md  estimates.md  expenses.md  final-accounts-reports.md  hire-purchases.md  income-tax-returns.md  invoices.md  journal-sets.md  login.md  logout.md  notes.md  payroll-profiles.md  payroll.md  practice.md  price-list-items.md  projects.md  properties.md  recurring-invoices.md  (+8 more)
packaging/homebrew/: freeagent.rb
scripts/: build-macos-pkg.sh  checksums.sh  generate-homebrew-formula.sh  install.sh  package.sh  release.js
src/: main.rs  output.rs  update.rs
src/api/: client.rs  mod.rs  retry.rs
src/auth/: config.rs  mod.rs  oauth.rs  token.rs
src/commands/: account_managers.rs  accounting.rs  attachments.rs  auth.rs  bank_accounts.rs  bank_feeds.rs  bank_transaction_explanations.rs  bank_transactions.rs  bills.rs  capital_asset_types.rs  capital_assets.rs  categories.rs  cis_bands.rs  clients.rs  company.rs  contacts.rs  corporation_tax_returns.rs  credit_note_reconciliations.rs  credit_notes.rs  currencies.rs  depreciation_profiles.rs  ec_moss.rs  email_addresses.rs  estimate_items.rs  estimates.rs  expenses.rs  final_accounts_reports.rs  hire_purchases.rs  income_tax_returns.rs  invoices.rs  journal_sets.rs  mod.rs  notes.rs  payroll.rs  payroll_profiles.rs  practice.rs  price_list_items.rs  projects.rs  properties.rs  recurring.rs  (+6 more)
tests/: cli_auth.rs  cli_help.rs
