[package]
name = "freeagent"
version = "0.1.3"
edition = "2021"
authors = ["FreeAgent CLI"]
description = "A comprehensive command-line interface for the FreeAgent accounting API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/amogower/freeagent-cli"
keywords = ["freeagent", "accounting", "cli", "api", "invoices"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# OAuth2
oauth2 = "4.4"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Local HTTP server for OAuth callback
tiny_http = "0.12"

# Open browser
webbrowser = "0.8"

# Secure token storage
directories = "5.0"

# Terminal colors and formatting
colored = "2.1"
comfy-table = "7.1"

# UUID for state parameter
uuid = { version = "1.6", features = ["v4"] }

# Base64 encoding
base64 = "0.21"

# SHA256 for PKCE
sha2 = "0.10"

# Auto-update support
flate2 = "1.0"
semver = "1.0"
tar = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.1"
serial_test = "3.0"
tempfile = "3.10"

[package.metadata.deb]
maintainer = "FreeAgent CLI"
section = "utils"
priority = "optional"
assets = [
    ["target/release/freeagent", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/freeagent/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/freeagent", dest = "/usr/bin/freeagent", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/freeagent/README.md", mode = "644" },
]
